# Practica-calificada-2

./: .gitignore  CMakeLists.txt  README.md
benchmark/: README.md  benchmark_simple.cpp  run_benchmark.sh
demos/: README.md  run_example.sh
docs/: Actividad1_semana1.md  Actividad2_semana2.md  Actividad3-semana3.md
include/: InsertOrErase.h
resultados/: ctest_output.txt
src/: main.cpp
tests/: test_samples.cpp
video/: linkOneDrive.txt
